--- a/project3.html
+++ b/project3.html
@@ -43,6 +43,42 @@
   <section class='c-slider'>
     <div class='c-slider-init'>
   
+      <div class='c-slide' style='background-image:url("assets/fixfy.png")'>
+        <div class='c-slide-content'>
+          <div class='c-wrap c-wrap--line'>
+            <h2 class='c-slide__title'>
+           FIXFY
+              <span class='c-slide__title--large'>Website</span>
+            </h2>
+          </div>
+          <div class='c-wrap c-wrap--small'>
+            <div class='c-slide__info'>
+              <h3 class='c-slide__subtitle'>Amazing Interactions </h3>
+              <p class='c-slide__body'>Made an amazing landing page with 3d visual effects that enhabce user interest
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class='c-slide' style='background-image:url("assets/byme.png")'>
+        <div class='c-slide-content'>
+          <div class='c-wrap c-wrap--line'>
+            <h2 class='c-slide__title'>
+              BYME STUDIO
+              <span class='c-slide__title--large'>Website</span>
+            </h2>
+          </div>
+          <div class='c-wrap c-wrap--small'>
+            <div class='c-slide__info'>
+              <h3 class='c-slide__subtitle'>Amazing Interactions </h3>
+              <p class='c-slide__body'>Made an amazing landing page with 3d visual effects that enhabce user interest
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class='c-slide' style='background-image:url("assets/az-agency.png")'>
         <div class='c-slide-content'>
           <div class='c-wrap c-wrap--line'>
@@ -83,7 +119,7 @@
         <div class='c-slide-content'>
           <div class='c-wrap c-wrap--line'>
             <h2 class='c-slide__title'>
-              Explor
+           Explore
               <span class='c-slide__title--large'>Brandbeet Website</span>
             </h2>
           </div>
@@ -153,7 +189,7 @@
         <div class='c-slide-content'>
           <div class='c-wrap c-wrap--line'>
             <h2 class='c-slide__title'>
-              Exploring
+           Exploreing
               <span class='c-slide__title--large'>Interior Decor </span>
             </h2>
           </div>
@@ -170,7 +206,7 @@
         <div class='c-slide-content'>
           <div class='c-wrap c-wrap--line'>
             <h2 class='c-slide__title'>
-              Exploring
+           Exploreing
               <span class='c-slide__title--large'>A blog</span>
             </h2>
           </div>
@@ -223,7 +259,7 @@
         <div class='c-slide-content'>
           <div class='c-wrap c-wrap--line'>
             <h2 class='c-slide__title'>
-              Exploring
+           Exploreing
               <span class='c-slide__title--large'>Rejouice Website</span>
             </h2>
           </div>
@@ -240,7 +276,7 @@
         <div class='c-slide-content'>
           <div class='c-wrap c-wrap--line'>
             <h2 class='c-slide__title'>
-              Exploring
+           Exploreing
               <span class='c-slide__title--large'>Retro Design</span>
             </h2>
           </div>
