--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <div class="phone">
                         <i class="ri-phone-line"></i>
                         <h3>Phone number <br>
-                        <span>(555) 123-4567</span></h3>
+                        <span>+92 3142828885</span></h3>
                     </div>
                     <div class="email">
                         <i class="ri-mail-line"></i>
