--- a/resume.html
+++ b/resume.html
@@ -58,6 +58,10 @@
 .resume-four{
     transform: perspective(1000px) rotateX(-90deg);
 }
+.resume-intro a{
+    margin: auto;
+}
+
     </style>
 </head>
 <body>
@@ -66,7 +70,9 @@
         <div class="resume-intro">
            <h1>Resume</h1>
             <p>Have a look at my resume, feel free to download</p>
+         
         </div>
+      
         <div class="resume-con">
             <div class="resume-one rs"><img src="/assets/resume-wp.png" alt="" srcset=""></div>
             <div class="resume-two rs"><img src="/assets/resume-2.png" alt="" srcset=""></div>
@@ -74,7 +80,7 @@
             <div class="resume-four rs"><img src="/assets/resume-4.png" alt="" srcset=""></div>
         </div>
         <div class="pg4-overlay">
-            <a href="/assets/blue professional modern CV resume.pdf">
+            <a href="/assets/Resume_Samman.pdf">
                 <button><h3>Download <i class="ri-arrow-right-up-line"></i></h3>
                     <h3>Download <i class="ri-arrow-right-up-line"></i></h3></button>
             </a>
